// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'app_localizations.dart';

// ignore_for_file: type=lint

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get achievements => 'Achievements';

  @override
  String get experimentalFeatures => 'experimental features';

  @override
  String get looseWeight => 'Lose weight';

  @override
  String get gainWeight => 'Gain weight';

  @override
  String get tapDateAboveToAddEntry => 'Tap a date above to add an entry.';

  @override
  String get looseWeightSubtitle =>
      'Switching between losing or gaining weight.';

  @override
  String get days => 'days';

  @override
  String get weeks => 'weeks';

  @override
  String get week => 'week';

  @override
  String get months => 'months';

  @override
  String get month => 'month';

  @override
  String get years => 'years';

  @override
  String get year => 'year';

  @override
  String get never => 'never';

  @override
  String get weekly => 'weekly';

  @override
  String get biweekly => 'biweekly';

  @override
  String get monthly => 'monthly';

  @override
  String get quarterly => 'quarterly';

  @override
  String get backupReminder => 'Please back up regularly';

  @override
  String get backupReminderButton => 'back up';

  @override
  String get backupSuccess => 'Backup successfully exported';

  @override
  String get backupInterval => 'Interval';

  @override
  String get lastBackup => 'last backup';

  @override
  String get nextBackup => 'next backup';

  @override
  String get stats => 'Statistics';

  @override
  String get trale => 'trale';

  @override
  String get unit => 'Units';

  @override
  String get date => 'Date';

  @override
  String get weight => 'Weight';

  @override
  String get user => 'User profile';

  @override
  String get userSettings => 'User settings';

  @override
  String get dangerzone => 'Danger zone';

  @override
  String get settings => 'Settings';

  @override
  String get faq => 'FAQ';

  @override
  String get about => 'About';

  @override
  String get defaultLang => 'System default';

  @override
  String get language => 'Language';

  @override
  String get theme => 'Theme';

  @override
  String get darkmode => 'Dark';

  @override
  String get lightmode => 'Light';

  @override
  String get systemmode => 'System';

  @override
  String get export => 'Export all measurements';

  @override
  String get exportSubtitle => 'This exposes all measurements to all apps.';

  @override
  String get exportDialog =>
      'This will export all measurements to the external storage. Writing permissions are needed.';

  @override
  String get open => 'Open';

  @override
  String get abort => 'Cancel';

  @override
  String get import => 'Import backup';

  @override
  String get importSubtitle => 'Import measurements from .txt backup file.';

  @override
  String get amoled => 'Black';

  @override
  String get amoledSubtitle =>
      'Change background color to true black for dark mode.';

  @override
  String get reset => 'Reset app';

  @override
  String get factoryReset => 'Factory reset';

  @override
  String get factoryResetSubtitle =>
      'Reset all settings and delete all measurements.';

  @override
  String get factoryResetDialog =>
      'Reset application to default? This will delete all settings, and added measurements. This can not be undone.';

  @override
  String get delete => 'Delete';

  @override
  String get importingAbort => 'Import cancelled.';

  @override
  String get importDialog =>
      'Include all measurements to the current database. This can not be undone!';

  @override
  String get home => 'Home';

  @override
  String get yes => 'Yes';

  @override
  String get ok => 'OK';

  @override
  String get save => 'Save';

  @override
  String get edit => 'Edit';

  @override
  String get backup => 'Backup';

  @override
  String get time => 'Time';

  @override
  String get assets => 'assets';

  @override
  String get packages => 'packages';

  @override
  String get loading => 'Loading';

  @override
  String get measurements => 'Measurements';

  @override
  String get version => 'Version';

  @override
  String get tpl => 'Third-party licenses';

  @override
  String get licence => 'License';

  @override
  String get sourcecode => 'Source code';

  @override
  String get openIssue => 'Open issue';

  @override
  String undertpl(String years, String author, String licence) {
    return '© $years by $author under $licence licence';
  }

  @override
  String get addWeight => 'Enter your weight';

  @override
  String get addHeight => 'Enter your height';

  @override
  String get interpolation => 'interpolation';

  @override
  String get strength => 'strength';

  @override
  String get none => 'None';

  @override
  String get soft => 'Soft';

  @override
  String get medium => 'Medium';

  @override
  String get strong => 'Strong';

  @override
  String get welcome => 'Welcome';

  @override
  String get onBoarding1 =>
      'This simplistic Material-You-design app helps you to reach your dream weight! Whether you want to gain weight, lose weight or simply maintain your weight: Reliable weight predictions and versatile statistics help you to stay on track. \n\n Join our community today to trace yourself. \n🐺🤸‍♀️🏋‍♀️🧘‍♂️🏆🥇';

  @override
  String get onBoarding2 =>
      'Choose one out of six themes to personalize your app. Which one does express your feelings the best?';

  @override
  String get onBoarding3 =>
      'Thank you for giving our app a try. 🙂\n\n If you like the app, we would be very happy about your feedback, a contribution on Github or a coffee. In return, we spare you annoying and privacy-critical ads.';

  @override
  String get onBoarding2Title => 'Style';

  @override
  String get onBoarding3Title => 'Privacy';

  @override
  String get skip => 'Skip';

  @override
  String get startApp => 'Start';

  @override
  String get targetWeight => 'Target weight';

  @override
  String get targetWeightMotivation =>
      'Setting a target weight is very important and a step in the right direction. Having a goal in mind motivates you to do more to achieve it.';

  @override
  String get targetWeightShort => 'Target';

  @override
  String get addUserName => 'How shall we call you?';

  @override
  String get addTargetWeight => 'Add target weight';

  @override
  String get intro1 => 'Press';

  @override
  String get intro2 => 'to get started';

  @override
  String get intro3 =>
      'Today is a good day to start with your first measurement!';

  @override
  String get faqtext =>
      'Here you find answers to some of the most frequent questions. If you have any other questions, feel free to open an issue on the github repository.';

  @override
  String get faq_q1 =>
      'The feature/function X is missing. When will it be implemented?';

  @override
  String get faq_a1 =>
      'The app is maintained in our free time and we try to keep the app sleek and simple. We believe that adding too many features making the app less usable. If you believe that we are missing a key feature, feel free to open an issue or a merge request.';

  @override
  String get faq_q2 => 'Can I see once again the intro/onboarding screen?';

  @override
  String get faq_a2 => 'Yes for sure! Just press the icon below.';

  @override
  String get faq_a2_widget => 'Return to onboarding screen';

  @override
  String get faq_q3 => 'What is the app icon showing?';

  @override
  String get faq_a3 =>
      'A howling wolf sitting, its tail partially hidden by the letter \'t\', and the letter \'r\'.';

  @override
  String get faq_q4 =>
      'Can I enter a target weight below 50kg / 110 lb / 7.9 st?';

  @override
  String get faq_a4 =>
      'Yes, by providing your height.\n\nAnorexia is a serious disease that is increasingly becoming a problem for society as a whole, partly due to the many negative examples on social media. To support prevention efforts, we do not allow target weights below 50 kg / 110 lb / 7.9 st. Entering your height allows us to calculate a minimum target weight corresponding to a BMI of 18.5.';

  @override
  String get target_weight_warning =>
      'Anorexia is a serious disease that is increasingly becoming a problem for society as a whole, partly due to the many negative examples on social media. To support prevention efforts, we do not allow target weights below 50 kg / 110 lb / 7.9 st and BMIs below 18.5.';

  @override
  String get max => 'max';

  @override
  String get min => 'min';

  @override
  String get change => 'change';

  @override
  String get totalChange => 'total change';

  @override
  String get schemeVariant => 'scheme variant';

  @override
  String get mean => 'mean';

  @override
  String get measurementFrequency => 'measurement frequency';

  @override
  String get targetWeightReached => 'you reached your target weight!';

  @override
  String get targetWeightReachedIn => 'left to reach target weight';

  @override
  String get maxStreak => 'longest streak';

  @override
  String get currentStreak => 'current streak';

  @override
  String get timeSinceFirstMeasurement => 'time since first measurement';

  @override
  String get firstDay => 'First day';

  @override
  String get highContrast => 'High contrast';

  @override
  String get bmi => 'BMI';
}
